--- a/funds_controller/CMakeLists.txt
+++ b/funds_controller/CMakeLists.txt
@@ -23,3 +23,6 @@ target_link_libraries(${PROJECT_NAME}
 )
 
 target_include_directories(${PROJECT_NAME} PUBLIC ${PROJECT_SOURCE_DIR}/include)
+
+add_executable(${PROJECT_NAME} main.cpp)
+target_link_libraries(${PROJECT_NAME} common connector)
