--- a/.vscode/settings.json
+++ b/.vscode/settings.json
@@ -2,6 +2,7 @@
     "files.associations": {
         "optional": "cpp",
         "system_error": "cpp",
-        "__node_handle": "cpp"
+        "__node_handle": "cpp",
+        "locale": "cpp"
     }
 }
